添加了模板驱动表单HeroTemplateForm以及响应式动态表单ReactiveForm

--- a/src/app/heroes.component.html
+++ b/src/app/heroes.component.html
@@ -12,8 +12,8 @@
   <li *ngFor="let hero of heroes"
       [class.selected]="hero === selectedHero"
       (click)="onSelect(hero)">
-    <span class="badge">{{hero.id}}</span>{{hero.name}}
-    <button class="delete"
+    <span class="hero-badge">{{hero.id}}</span>{{hero.name}}
+    <button class="hero-delete"
             (click)="delete(hero);
           $event.stopPropagation()">x</button>
   </li>
