--- a/src/app/heroes.component.css
+++ b/src/app/heroes.component.css
@@ -31,7 +31,7 @@
   position: relative;
   top: -3px;
 }
-.heroes .badge {
+.heroes .hero-badge {
   display: inline-block;
   font-size: small;
   color: white;
@@ -51,10 +51,10 @@ button {
   border: none;
   padding: 5px 10px;
   border-radius: 4px;
-  cursor: pointer;
+  /*cursor: pointer;*/
   cursor: hand;
 }
-button.delete {
+button.hero-delete {
   float: right;
   margin-top: 2px;
   margin-right: .8em;
